--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <p>Очаровательная, но горделивая кошка, которая никогда сама не попросит ласки. Однако она будет рада полежать у вас на коленях. Особенно, если вы угостите ее паштетом из индейки.</p>
                 </div>
                 <div class="photo-item">
-                    <img scr="misha.jpg" alt="Кот Миша">
+                    <img scr="miha.jpg" alt="Кот Миша">
                     <h3>Миша</h3>
                     <p>На первый взгляд это очень грозный и ворчливый кот. Но на самом деле он один из самых дружелюбных котов нашего заведения, который всегда рад провести с вами время. А чтобы заполучить его доверие угостите его тунцом.</p>
                 </div>
