--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
             <h1>Добро пожаловать в Котокафе "Лапка"</h1>
             <img src="face.jpg" alt="Лицевая картинка Котокафе Лапка">
             <a href="#our-cats" class="cta-button">Наши котики</a>
-            <button id="helpButton" class="cta-button">Помочь</button>
         </section>
 
 
@@ -35,7 +34,7 @@
         <h2>Помощь</h2>
         
         <img src="cat-help.jpg" alt="Котик, который нуждается в помощи" width="100%" height="100%">
-        <p>Если хотите помочь, позвоните нам: <strong>+7 938 908 55 13</strong></p>
+        <p>Если хотите помочь, позвоните нам: <strong>+7 (495) 532-34-95</strong></p>
     </div>
 </div>
 
@@ -62,9 +61,6 @@
         }
     });
 </script>
-
-
-
 
 
 
