--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <h1>Добро пожаловать в Котокафе "Лапка"</h1>
             <img src="face.jpg" alt="Лицевая картинка Котокафе Лапка">
             <a href="#our-cats" class="cta-button">Наши котики</a>
+            <a href="#about us" class="cta-button">Что интересного вы у нас найдете</a>
         </section>
 
 
@@ -64,6 +65,7 @@
             <img src="kitti.jpg" alt="Внутреннее убранство 2">
         </section>
         <section>
+            <section id="about us">
             <h2>Что интересного вы у нас найдете</h2>
             <p>Ассортимент, декор и персонал</p>
         </section>
@@ -82,6 +84,7 @@
             <p>В кафе вас встретят прекрасные кошко-девушки. На протяжении всего вашего присутствия они будут сопровождать и радовать вас.</p>
             <img src="personal.jpg" alt="Картинка персонала">
         </div>
+            </section>
         <section id="our-cats">
             <h2>Наши котики</h2>
             <div class="photo-container">
