--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
 <!-- Кнопка открытия -->
-<button class="open-btn">Открыть окно</button>
+<button class="open-btn">Помочь</button>
 
 <!-- Модальное окно -->
 <div class="modal">
