--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div class="modal">
     <div class="modal-content">
         <span class="close">&times;</span>
-        <h2>Помощь</h2>
+        <h2>Помочь</h2>
         
         <img src="cat-help.jpg" alt="Котик, который нуждается в помощи" width="100%" height="100%">
         <p>Если хотите помочь, позвоните нам: <strong>+7 (495) 532-34-95</strong></p>
@@ -57,8 +57,6 @@
         }
     });
 </script>
-
-
 
         <section class="two-images">
             <img src="kitten.jpg" alt="Внутреннее убранство 1">
